[gd_scene load_steps=11 format=2]

[ext_resource path="res://scene/levelGenerator2/level_generator2.gd" type="Script" id=1]
[ext_resource path="res://scene/levelGenerator2/grass_wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/character/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/ui/Pause.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/inventory/Inventory.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/ui/MobileController.tscn" type="PackedScene" id=6]
[ext_resource path="res://script/UserInterface.gd" type="Script" id=7]
[ext_resource path="res://scene/enemy/EnemyGenerator.tscn" type="PackedScene" id=8]
[ext_resource path="res://scene/level/Portal.tscn" type="PackedScene" id=9]
[ext_resource path="res://scene/ui/FadeScreen.tscn" type="PackedScene" id=10]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="grass_wall" parent="." instance=ExtResource( 2 )]
collision_layer = 512

[node name="EnemyGenerator" parent="." instance=ExtResource( 8 )]

[node name="EnemyGenerator2" parent="." instance=ExtResource( 8 )]

[node name="EnemyGenerator3" parent="." instance=ExtResource( 8 )]

[node name="EnemyGenerator4" parent="." instance=ExtResource( 8 )]

[node name="EnemyGenerator5" parent="." instance=ExtResource( 8 )]

[node name="EnemyGenerator6" parent="." instance=ExtResource( 8 )]

[node name="EnemyGenerator7" parent="." instance=ExtResource( 8 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 500, 2200 )

[node name="Portal" parent="." instance=ExtResource( 9 )]

[node name="UserInterface" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="MobileController" parent="UserInterface" instance=ExtResource( 6 )]

[node name="Pause" parent="UserInterface" instance=ExtResource( 4 )]

[node name="Inventory" parent="UserInterface" instance=ExtResource( 5 )]
visible = false

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="FadeScreen" parent="." instance=ExtResource( 10 )]
